--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -62,16 +62,16 @@
 
                     <div class="d-flex justify-content-end">
                         <div class="mx-1">
-                            @Html.ActionLink("   PDF", "ExportarCalificacionesPDF", "Calificaciones", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   PDF", "ExportarCalificacionesPDF", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Excel", "ExportarCalificacionesExcel", "Calificaciones", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   Excel", "ExportarCalificacionesExcel", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Word", "ExportarCalificacionesWord", "Calificaciones", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   Word", "ExportarCalificacionesWord", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Enviar", "EnviarCalificaciones", "Calificaciones", new { }, new { @class = "btn btn-primary bi bi-send" })
+                            @Html.ActionLink("   Enviar", "EnviarCalificaciones", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-primary bi bi-send" })
                         </div>
                     </div>
                 </div>
